--- a/inst/stan.Rmd
+++ b/inst/stan.Rmd
@@ -81,7 +81,7 @@ plot(ts, ylab = name)
 ```
 
 
-It contains $`r length(ts)`$ observations, going from `r as.POSIXct(data[1,1]/1000, origin="1970-01-01")` to `r as.POSIXct(data[length(data[,1]),1]/1000, origin="1970-01-01")`. 
+It contains `r length(ts)` observations, going from `r as.POSIXct(data[1,1]/1000, origin="1970-01-01")` to `r as.POSIXct(data[length(data[,1]),1]/1000, origin="1970-01-01")`. 
 
 ```{r, echo = FALSE, eval = (constant == TRUE)}
 const <- unique(na.omit(data[,2]))
@@ -114,7 +114,7 @@ mean_ts <- mean(ts)
 
 `r if (constant == FALSE){chunki}`
 
-We will normalize the series in order to have all values between $0$ and $1$. This will be useful when comparing it with other time series that have different units. We display the plot of the normalized series.
+We will normalize the series in order to have all values between 0 and 1. This will be useful when comparing it with other time series that have different units. We display the plot of the normalized series.
 
 ```{r, echo = FALSE}
 ts <- (ts - min_ts)/(max_ts - min_ts)
