--- a/inst/stan.Rmd
+++ b/inst/stan.Rmd
@@ -2,7 +2,9 @@
 title: "The Mini Android"
 author: "Inés Añíbarro Gorostiza"
 date: "October 2018"
-output: pdf_document
+output: 
+  pdf_document
+  html_document
 params:
   test: 'default'
 ---
